--- a/developments/sqlc.yaml
+++ b/developments/sqlc.yaml
@@ -1,19 +1,18 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: 
-    - "./queries/hub.sql"
-    - "./queries/user.sql"
-    schema: 
-    - "./schema/hub.sql"
-    - "./schema/user.sql"
+    queries: "./queries"
+    schema: "./migrations"
     gen:
       go:
         package: "models"
         out: "../models"
-        sql_package: "pgx5"
+        sql_package: "pgx/v4"
         emit_json_tags: true
         emit_interface: true
-
-
-
+        emit_db_tags: true
+        overrides:
+          - db_type: "text"
+            go_type:
+              import: "github.com/jackc/pgtype"
+              type: "Text"
