--- a/developments/docker-compose.yml
+++ b/developments/docker-compose.yml
@@ -50,14 +50,13 @@ services:
     restart: unless-stopped
 
   migrate:
-    build:
-      context: .
-      dockerfile: ./migrate.Dockerfile
+    image: migrate/migrate
     volumes:
       - "../database/migrations:/migrations/"
     networks:
       - postgres
-    command: ["migrate", "-path","/migrations", "-database", "postgres://postgres:postgres@postgres:5432/postgres?sslmode=disable", "up"]
+    command: [ "-path","/migrations", "-database", "postgres://postgres:postgres@postgres:5432/postgres?sslmode=disable", "up"]
+
 networks:
   postgres:
     driver: bridge
