--- a/developments/sqlc.yaml
+++ b/developments/sqlc.yaml
@@ -7,10 +7,11 @@ sql:
       go:
         package: "models"
         out: "../models"
-        sql_package: "pgx/v4"
+        sql_package: "pgx/v5"
         emit_json_tags: true
         emit_interface: true
         emit_db_tags: true
+        emit_result_struct_pointers: true
         overrides:
           - db_type: "text"
             go_type:
