--- a/developments/docker-compose.yml
+++ b/developments/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       context: ../
       dockerfile: ./developments/bdd_test.Dockerfile
     volumes:
-      - "../integration:/app/"
+      - "../:/app/"
     command: ["godog","run"]
 
   migrate:
