--- a/developments/sqlc.yaml
+++ b/developments/sqlc.yaml
@@ -7,7 +7,7 @@ sql:
       go:
         package: "models"
         out: "../models"
-        sql_package: "database/sql"
+        sql_package: "pgx/v5"
         emit_json_tags: true
         emit_interface: true
         emit_db_tags: true
