apply graceful shutdown

--- a/developments/sqlc.yaml
+++ b/developments/sqlc.yaml
@@ -15,19 +15,19 @@ sql:
         overrides:
           - db_type: "text"
             go_type:
-              import: "github.com/jackc/pgtype"
+              import: "github.com/jackc/pgx/v5/pgtype"
               type: "Text"
           - db_type: "timestamptz"
             go_type:
-              import: "github.com/jackc/pgtype"
+              import: "github.com/jackc/pgx/v5/pgtype"
               type: "Timestamptz"
           - db_type: "text"
             go_type:
-              import: "github.com/jackc/pgtype"
+              import: "github.com/jackc/pgx/v5/pgtype"
               type: "Text"
             nullable: true
           - db_type: "timestamptz"
             go_type:
-              import: "github.com/jackc/pgtype"
+              import: "github.com/jackc/pgx/v5/pgtype"
               type: "Timestamptz"
             nullable: true
