--- a/deployments/helms/gateway/templates/deployment.yaml
+++ b/deployments/helms/gateway/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           args:
-            - "go-gen-tools {{ .Chart.Name }}"
+            - "go-gen-tools server {{ .Chart.Name }}"
             - "--commonConfigPath=/configs/common.config.yaml"
             - "--configPath=/configs/{{ .Chart.Name }}.config.yaml"
             - "--secretsPath=/configs/{{ .Chart.Name }}.secrets.yaml.encrypted"
