--- a/developments/Dockerfile
+++ b/developments/Dockerfile
@@ -1,17 +1,11 @@
-FROM duyledat197/golang-proto:0.1 as build-stage
+#* build:
+FROM golang:1.20.0 as build-stage
 
 WORKDIR /app
-COPY . /app
+COPY .. /app
+RUN CGO_ENABLED=0 && go build -o go-gen-tools ./cmd/srv/...
 
-RUN CGO_ENABLED=0 && go build -o app-exe ./cmd/srv/...
-
-
-# production: 
-FROM golang:1.20.0 as production-stage
-
-COPY --from=build-stage /app/app-exe /bin
-
-RUN chmod +x /bin/app-exe
-
-ENTRYPOINT [ "/bin/app-exe", "start" ]
-
+#* production: 
+FROM alpine:3.14 as production-stage
+COPY --from=build-stage /app/go-gen-tools /bin
+RUN chmod +x /bin/go-gen-tools
