--- a/.github/workflows/go_package.yaml
+++ b/.github/workflows/go_package.yaml
@@ -20,8 +20,8 @@ jobs:
       - name: Build
         run: go build -v ./...
 
-      # - name: Test
-      #   run: go test -v ./...
+      - name: Test
+        run: go test -v ./...
       
       - name: Lint
         uses: reviewdog/action-golangci-lint@v2
