--- a/.github/workflows/limit_pull_request.yaml
+++ b/.github/workflows/limit_pull_request.yaml
@@ -20,7 +20,7 @@ jobs:
         with:
           script: |
             const { PR_LIMIT } = process.env;
-            const result = await github.pulls.list({
+            const result = await github.rest.pulls.list({
               owner: context.repo.owner,
               repo: context.repo.repo,
               state: 'open',
