--- a/.github/workflows/limit_pull_request.yaml
+++ b/.github/workflows/limit_pull_request.yaml
@@ -26,6 +26,7 @@ jobs:
               state: 'open',
               base: 'main',
             });
+            console.log(result);
             const num = result.filter(pull => !pull.draft).length;
             if(num <= PR_LIMIT) return;
             core.setOutput('isConvert', true);
