--- a/.github/workflows/branch_rules.yaml
+++ b/.github/workflows/branch_rules.yaml
@@ -20,7 +20,7 @@ jobs:
             const regex = 'feature/*';
             const headBranch = context.payload.pull_request.head.ref;
             if(!headBranch.match(regex)) {
-                github.issues.createComment({
+                github.rest.issues.createComment({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                   issue_number: context.payload.number,
