--- a/.github/workflows/branch_rules.yaml
+++ b/.github/workflows/branch_rules.yaml
@@ -24,6 +24,6 @@ jobs:
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                   issue_number: context.payload.number,
-                  body: 'Source branch must be feature/*',
+                  body: 'Source branch must be <b> feature/* </b>, please follow rules in <a href="https://github.com/duyledat197/go-gen-tools/wiki"> link </a>',
                 });
             }
