--- a/.github/workflows/go_package.yaml
+++ b/.github/workflows/go_package.yaml
@@ -1,11 +1,11 @@
 name: Go Package
 
 on:
-  push:
   pull_request: 
     branches:
       - main
     types: [opened]
+  label: 
 
 jobs:
   build:
