--- a/.github/workflows/pull_request_rules.yaml
+++ b/.github/workflows/pull_request_rules.yaml
@@ -7,7 +7,7 @@ on:
     types: [opened, reopened, ready_for_review]
 
 jobs:
-  build:
+  limit_pull_request:
     runs-on: ubuntu-latest
     outputs:
       isConvert: ${{ steps.limit_pull_request.outputs.isConvert }}
